[project]
name = "what-is-entire"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "josh-gree", email = "joshuadouglasgreenhalgh@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=9.10.0",
    "jupyterlab>=4.5.4",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
]
